--- a/.classpath
+++ b/.classpath
@@ -2,5 +2,12 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_202"/>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.109/lib/mysql-connector-j-8.0.31.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.109/webapps/StrutsConorsAge/WEB-INF/lib/commons-logging-1.0.4.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.109/webapps/StrutsConorsAge/WEB-INF/lib/freemarker-2.3.8.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.109/webapps/StrutsConorsAge/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.109/webapps/StrutsConorsAge/WEB-INF/lib/ognl-2.6.11.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.109/webapps/StrutsConorsAge/WEB-INF/lib/struts2-core-2.0.11.jar"/>
+	<classpathentry kind="lib" path="C:/apache-tomcat-9.0.109/webapps/StrutsConorsAge/WEB-INF/lib/xwork-2.0.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
